assets/style.css
 * {
    scroll-behavior: smooth;
}

/* variables */
:root {
    --primary: #FFC636;
    --secondary: #2E2E2E;
}

/* reset */
body,p,a,ul,li {
    margin: 0;
    padding: 0;
    text-decoration: none;
}
li {
    list-style-type: none;
}

/* base styles */
a:link, a:visited {
    text-decoration: none;
    decoration: none;
    color: var(--primary);
}

body {
    background: var(--secondary);
    overflow-x: hidden;
    font-family: "Mingzat Regular";
}

h1 {
    color: var(--primary);
}

.button {
    background: none;
    border: 2px solid var(--primary);
    color: var(--primary);
    padding: 6px 12px;
    border-radius: 20px;
    text-transform: uppercase;
    box-shadow:  1px 2px 3px rba(0,0,0,0.6);
}

.button:hover {
    color:  #222;
    background: var(--primary);
}

input,textarea {
    background: rgba(225, 225, 225, 0.05);
    padding: 10 px 16px;
    border-radius: 20px;
    border: 2px solid #9893D8;
    color: #f2f2f2;
}

/* fonts */
@font-face {
    font-family: "Mingzat Regular";
    src: url('./fonts/Mingzat-Regular.ttf');
}

/* mobile styles */

/* small tablet styles  */
@media screen and (min-width: 620px) {

}

/* large tablet & laptop styles */
@media screen and (min-width: 960px) {
    
}

/* desktop styles */
@media screen and (min-width: 1200px) {

}

